# Application/Items/Dtos.cs
@@ -1,6 +1,6 @@
 ﻿namespace BlazorApp1.Application.Items;
 
-public record ItemDto(string Id, string Name, string Description, StatusDto Status, DateTime Created, string CreatedBy, DateTime? LastModified, string? LastModifiedBy);
+public record ItemDto(string Id, string Name, string Description, StatusDto Status, string? Image, DateTime Created, string CreatedBy, DateTime? LastModified, string? LastModifiedBy);
 
 public record StatusDto(int Id, string Name);
 
